# docs/swagger.yaml
@@ -23,10 +23,10 @@ definitions:
     type: object
   dto.AudioDTO:
     properties:
-      path:
+      message:
         type: string
     required:
-    - path
+    - message
     type: object
   dto.CreatePreferenceDTO:
     properties:
@@ -37,13 +37,10 @@ definitions:
     type: object
   dto.InputQuestionDTO:
     properties:
-      location:
-        type: string
-      preferences:
+      message:
         type: string
     required:
-    - location
-    - preferences
+    - message
     type: object
   dto.LoginDTO:
     properties:
@@ -59,7 +56,25 @@ definitions:
     properties:
       id:
         type: integer
+      lat:
+        description: Только для node
+        type: number
+      lon:
+        description: Только для node
+        type: number
+      members:
+        items:
+          properties:
+            ref:
+              type: integer
+            role:
+              type: string
+            type:
+              type: string
+          type: object
+        type: array
       nodes:
+        description: Только для way
         items:
           type: integer
         type: array
@@ -91,17 +106,6 @@ definitions:
     - email
     - password
     - username
-    type: object
-  models.Audio:
-    properties:
-      created_at:
-        description: Время создания записи
-        type: string
-      id:
-        type: integer
-      path:
-        description: Путь
-        type: string
     type: object
   models.ListPreference:
     properties:
@@ -138,9 +142,7 @@ definitions:
     type: object
   models.Question:
     properties:
-      location:
-        type: string
-      preferences:
+      message:
         type: string
     type: object
   models.User:
@@ -157,17 +159,6 @@ definitions:
 info:
   contact: {}
 paths:
-  /addresses:
-    post:
-      responses:
-        "201":
-          description: Массис отправлен
-          schema:
-            $ref: '#/definitions/models.Question'
-        "400":
-          description: Invalid input" // Указание структуры ошибки
-          schema:
-            $ref: '#/definitions/controllers.ErrorResponse'
   /ask:
     post:
       consumes:
@@ -194,50 +185,6 @@ paths:
       summary: Задать вопрос ЛЛМ
       tags:
       - LLM
-  /audio:
-    get:
-      description: Возвращает список путей аудио из БД
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/models.Audio'
-            type: array
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/controllers.ErrorResponse'
-      summary: Получить все пути аудио
-      tags:
-      - TTS
-    post:
-      consumes:
-      - application/json
-      description: Сохраняет путь до аудиофайла
-      parameters:
-      - description: Path data
-        in: body
-        name: audio
-        required: true
-        schema:
-          $ref: '#/definitions/dto.AudioDTO'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Путь сохранен в БД
-          schema:
-            $ref: '#/definitions/models.Audio'
-        "400":
-          description: Invalid input" // Указание структуры ошибки
-          schema:
-            $ref: '#/definitions/controllers.ErrorResponse'
-      summary: Сохранить Аудио в БД postgres
-      tags:
-      - TTS
   /audio/generate:
     post:
       consumes:
