# dto/input_question.go
@@ -2,6 +2,5 @@ package dto
 
 
 type InputQuestionDTO struct {
-	Preferences    string `json:"preferences" binding:"required"`
-	Location    string `json:"location" binding:"required"`
+	Message    string `json:"message" binding:"required"`
 }
