# models/question.go
@@ -1,6 +1,5 @@
 package models
 
 type Question struct {
-    Preferences string `json:"preferences"`
-    Location string `json:"location"`
+    Message string `json:"message"`
 }
